# uncalibrated_reasoning

./: .gitignore  .rayignore  README.md  pyproject.toml
paper_data/: copy_paper_data.ipynb
paper_data/baselines/replogle_k562_essential_cnmf/hit_probability_v2-split-test/: preds-1-5.pq  preds-2-5.pq  preds-3-5.pq  preds-4-5.pq  preds-5-5.pq
paper_data/experiments/final_grpo/global_step_180/replogle_k562_essential_cnmf/hit_probability_v2-split-test/: preds-1-8.pq  preds-2-8.pq  preds-3-8.pq  preds-4-8.pq  preds-5-8.pq  preds-6-8.pq  preds-7-8.pq  preds-8-8.pq
paper_data/experiments/final_grpo_no_std/global_step_180/replogle_k562_essential_cnmf/hit_probability_v2-split-test/: preds-1-8.pq  preds-2-8.pq  preds-3-8.pq  preds-4-8.pq  preds-5-8.pq  preds-6-8.pq  preds-7-8.pq  preds-8-8.pq
paper_data/task_data/replogle_k562_essential_cnmf/split/: test.pq  train.pq  val.pq
paper_data/task_data/replogle_k562_essential_cnmf/split_verl/hit_probability_v2/: test.pq  train.pq  val.pq
uncalibrated_reasoning/: utils.py
uncalibrated_reasoning/perturbation/: README.md  eval.py  eval.sh  launch_final_grpo.sh  launch_final_grpo_no_std.sh  launch_final_ppo.sh  launch_final_rloo.sh  merge_checkpoints.sh  probability_reward.py  run_merge.sh  train.sh  view_results.ipynb  view_training_metrics.ipynb
uncalibrated_reasoning/perturbation/prompts/: hit_probability.prompt  hit_probability_v2.prompt  hit_probability_v3.prompt
uncalibrated_reasoning/synthetic/: explanation.ipynb  prediction.ipynb
(+16 files in other folders)
